# financial-news-triage-env

./: .gitignore  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: parser.py  prompt.txt
data/: easy.json  hard.json  medium.json
env/: __init__.py  environment.py  grader.py  loader.py  models.py  rewards.py  tasks.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_api.py  test_environment.py  test_models.py
