[project]
name = "financial-news-triage-env"
version = "1.0.0"
description = "Deterministic financial news triage environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "requests>=2.32.0",
    "openai>=1.40.0",
    "pytest>=8.3.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"